[Dice] Reuse existing NTP for signin

This logic existed pre-dice, and was not ported to Dice.
This is required to enable Dice by default in all tests.

Bug: 825173
Change-Id: If3e4c7a0aebbb735be45875342d66a5436ef5f35
Reviewed-on: https://chromium-review.googlesource.com/980172
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Mihai Sardarescu <msarda@chromium.org>
Commit-Queue: David Roger <droger@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546764}
Former-commit-id: dd3c8fe80c974a5c724ab2711c0f0099c1960a22