chrome/browser/ui/views/bookmarks/bookmark_bubble_sign_in_delegate_browsertest.cc
@@ -12,6 +12,7 @@
 #include "chrome/browser/chrome_notification_types.h"
 #include "chrome/browser/extensions/test_extension_service.h"
 #include "chrome/browser/extensions/test_extension_system.h"
+#include "chrome/browser/signin/account_consistency_mode_manager.h"
 #include "chrome/browser/ui/browser.h"
 #include "chrome/browser/ui/browser_finder.h"
 #include "chrome/browser/ui/browser_list.h"
@@ -23,6 +24,7 @@
 #include "chrome/test/base/in_process_browser_test.h"
 #include "chrome/test/base/testing_profile.h"
 #include "components/signin/core/browser/account_info.h"
+#include "components/signin/core/browser/profile_management_switches.h"
 #include "content/public/browser/notification_service.h"
 #include "content/public/test/test_utils.h"
 #include "ui/events/event_constants.h"
@@ -31,6 +33,31 @@
 #if !defined(OS_CHROMEOS)
 #include "chrome/browser/ui/views/profiles/profile_chooser_view.h"
 #endif
+
+namespace {
+
+// Returns true if signin happens in a modal dialog and false if it happens in a
+// regular tab.
+bool IsSigninModal(Profile* profile) {
+#if defined(OS_CHROMEOS)
+  return false;
+#else
+  return AccountConsistencyModeManager::GetMethodForProfile(profile) ==
+         signin::AccountConsistencyMethod::kDiceFixAuthErrors;
+#endif
+}
+
+// Returns whether the signin modal dialog is displayed.
+bool ShowsModalDialog(Browser* browser) {
+#if defined(OS_CHROMEOS)
+  NOTREACHED();
+  return false;
+#else
+  return browser->signin_view_controller()->ShowsModalDialog();
+#endif
+}
+
+}  // namespace
 
 class BookmarkBubbleSignInDelegateTest : public InProcessBrowserTest {
  public:
@@ -68,12 +95,12 @@ IN_PROC_BROWSER_TEST_F(BookmarkBubbleSignInDelegateTest, OnSignInLinkClicked) {
   int starting_tab_count = browser()->tab_strip_model()->count();
   SignInBrowser(browser());
 
-#if !defined(OS_CHROMEOS)
-  EXPECT_TRUE(browser()->signin_view_controller()->ShowsModalDialog());
-  EXPECT_EQ(starting_tab_count, browser()->tab_strip_model()->count());
-#else
-  EXPECT_EQ(starting_tab_count + 1, browser()->tab_strip_model()->count());
-#endif
+  if (IsSigninModal(profile())) {
+    EXPECT_TRUE(ShowsModalDialog(browser()));
+    EXPECT_EQ(starting_tab_count, browser()->tab_strip_model()->count());
+  } else {
+    EXPECT_EQ(starting_tab_count + 1, browser()->tab_strip_model()->count());
+  }
 }
 
 IN_PROC_BROWSER_TEST_F(BookmarkBubbleSignInDelegateTest,
@@ -81,9 +108,9 @@ IN_PROC_BROWSER_TEST_F(BookmarkBubbleSignInDelegateTest,
   int starting_tab_count = browser()->tab_strip_model()->count();
   SignInBrowser(browser());
 
-#if !defined(OS_CHROMEOS)
-  EXPECT_TRUE(browser()->signin_view_controller()->ShowsModalDialog());
-#endif
+  if (IsSigninModal(profile())) {
+    EXPECT_TRUE(ShowsModalDialog(browser()));
+  }
   EXPECT_EQ(starting_tab_count, browser()->tab_strip_model()->count());
 }
 
@@ -99,18 +126,20 @@ IN_PROC_BROWSER_TEST_F(BookmarkBubbleSignInDelegateTest,
   SignInBrowser(incognito_browser);
 
   int tab_count = browser()->tab_strip_model()->count();
+  if (IsSigninModal(profile())) {
 #if !defined(OS_CHROMEOS)
-  // ProfileChooser doesn't show in an incognito window.
-  EXPECT_FALSE(ProfileChooserView::IsShowing());
-
-  // Sign-in dialog is shown when there is at least one tab in the non-incognito
-  // browser.
-  EXPECT_EQ(starting_tab_count, tab_count);
-  EXPECT_TRUE(browser()->signin_view_controller()->ShowsModalDialog());
-#else
-  // On ChromeOS, the full-tab signin page is used.
-  EXPECT_EQ(starting_tab_count + 1, tab_count);
+    // ProfileChooser doesn't show in an incognito window.
+    EXPECT_FALSE(ProfileChooserView::IsShowing());
 #endif
+
+    // Sign-in dialog is shown when there is at least one tab in the
+    // non-incognito browser.
+    EXPECT_EQ(starting_tab_count, tab_count);
+    EXPECT_TRUE(ShowsModalDialog(browser()));
+  } else {
+    // On ChromeOS, the full-tab signin page is used.
+    EXPECT_EQ(starting_tab_count + 1, tab_count);
+  }
 
   // No effect is expected on the incognito browser.
   int tab_count_incognito = incognito_browser->tab_strip_model()->count();
@@ -130,10 +159,9 @@ IN_PROC_BROWSER_TEST_F(BookmarkBubbleSignInDelegateTest,
   // Signing in fom incognito should create a new non-incognito browser.
   Browser* new_regular_browser = chrome::FindTabbedBrowser(
       incognito_browser->profile()->GetOriginalProfile(), false);
-#if !defined(OS_CHROMEOS)
-  EXPECT_FALSE(
-      new_regular_browser->signin_view_controller()->ShowsModalDialog());
-#endif
+  if (IsSigninModal(new_regular_browser->profile())) {
+    EXPECT_FALSE(ShowsModalDialog(new_regular_browser));
+  }
 
   // The full-tab sign-in page should be shown in the newly created browser.
   EXPECT_EQ(1, new_regular_browser->tab_strip_model()->count());
@@ -165,12 +193,12 @@ IN_PROC_BROWSER_TEST_F(BookmarkBubbleSignInDelegateTest, BrowserRemoved) {
   delegate->OnEnableSync(AccountInfo());
 
   int tab_count = extra_browser->tab_strip_model()->count();
-#if !defined(OS_CHROMEOS)
-  EXPECT_TRUE(extra_browser->signin_view_controller()->ShowsModalDialog());
-  EXPECT_EQ(starting_tab_count, tab_count);
-#else
-  // A new tab should have been opened in the extra browser, which should be
-  // visible.
-  EXPECT_EQ(starting_tab_count + 1, tab_count);
-#endif
+  if (IsSigninModal(extra_browser->profile())) {
+    EXPECT_TRUE(ShowsModalDialog(extra_browser));
+    EXPECT_EQ(starting_tab_count, tab_count);
+  } else {
+    // A new tab should have been opened in the extra browser, which should be
+    // visible.
+    EXPECT_EQ(starting_tab_count + 1, tab_count);
+  }
 }
